# smart-travel-assistant-agent

./: .env
backend/: api_server.py  pyproject.toml  start_backend.bat
backend/src/smart_travel_assistant_agent/: api.py  main.py
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/: chatbot.ts
frontend/app/api/chatbot/: route.ts
frontend/app/components/: Chatbot.tsx
src/smart_travel_assistant_agent/: __init__.py  main.py
