[project]
name = "smart-travel-assistant-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [ "openai-agents>=0.3.1", "python-dotenv>=1.1.1",]
[[project.authors]]
name = "Marjan Ahmed"
email = "marjan.ahmed08@yahoo.com"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
smart-travel-assistant-agent = "smart_travel_assistant_agent:main"
smart-travel-assistant = "smart_travel_assistant_agent.main:start"
smart-travel-assistant-agent-smart-travel-assistant = "smart_travel_assistant_agent.main:start"
